clean Java 8 examples